--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -16,3 +16,11 @@ a {
         color: $secondary-color;
     }
 }
+
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+    z-index: 0;
+}
+.fade-enter, .fade-leave-to {
+    opacity: 0
+}
