--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -29,11 +29,17 @@ a {
     width: 100%;
 
     .content {
-        margin-top: 50px;
         padding: 30px;
+        max-width: 1100px;
+        margin: 50px auto 10px auto;
+
+        h3 {
+            color: $primary-color;
+            margin: 40px 0 20px 0;
+        }
     }
 }
 
-bold {
+.bold {
     font-weight: bold;
 }
