--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -37,6 +37,10 @@ a {
             color: $primary-color;
             margin: 40px 0 20px 0;
         }
+
+        p:not(.text):not(.digit) {
+            margin-top: 10px;
+        }
     }
 }
 
