--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -2,3 +2,6 @@ $primary-color: #1D3B75;
 $secondary-color: #7ca0e8;
 $grey: #655A55;
 $background-color: #FFFFFF;
+
+$box-shadow: 0 3px 9px rgba(0, 0, 0, 0.12);
+$box-shadow-hover: 0 6px 15px rgba(0, 0, 0, 0.25);
