--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -5,3 +5,6 @@ $background-color: #FFFFFF;
 
 $box-shadow: 0 3px 9px rgba(0, 0, 0, 0.12);
 $box-shadow-hover: 0 6px 15px rgba(0, 0, 0, 0.25);
+
+$width-menu: 250px;
+$width-menu-reduced: 50px;
