--- a/src/style/_animations.scss
+++ b/src/style/_animations.scss
@@ -24,3 +24,15 @@
     opacity: 0
 }
 // ---
+
+// Name: slide-left
+.slide-left-leave-active,
+.slide-left-enter-active {
+    transition: 1s;
+}
+.slide-left-enter {
+    transform: translate(-100%, 0);
+}
+.slide-left-leave-to {
+    transform: translate(-100%, 0);
+}
