--- a/src/style/_animations.scss
+++ b/src/style/_animations.scss
@@ -11,7 +11,8 @@
 
 // Name = quick-fade
 .quick-fade-enter-active {
-    transition: opacity .9s;
+    transition: opacity .2s;
+    transition-delay: .5s;
     z-index: 0;
 }
 
