--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -22,7 +22,7 @@ a {
 
     .content {
         padding: 30px;
-        max-width: 1100px;
+        max-width: $content-max-width;
         margin: 50px auto 10px auto;
 
         h3 {
