--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,3 +10,5 @@ $width-menu: 250px;
 $width-menu-reduced: 50px;
 
 $content-max-width: 1000px;
+
+$mobile-mode: $content-max-width + $width-menu + 60px;
