--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,6 +1,7 @@
 $primary-color: #1D3B75;
 $secondary-color: #7ca0e8;
-$grey: #655A55;
+$grey: #9C9F9E;
+$brown: #655A55;
 $background-color: #FFFFFF;
 
 $box-shadow: 0 3px 9px rgba(0, 0, 0, 0.12);
@@ -12,3 +13,5 @@ $width-menu-reduced: 50px;
 $content-max-width: 1000px;
 
 $mobile-mode: $content-max-width + $width-menu + 60px;
+
+$image-border-radius: 5px;
