--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -26,7 +26,7 @@ a {
         margin: 10px auto;
 
         & > *:first-child {
-            margin-top: unset;
+            margin-top: 20px;
         }
 
         h3 {
