--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -12,6 +12,8 @@ $width-menu-reduced: 50px;
 
 $content-max-width: 1000px;
 
+$mobile-max-width: 450px;
+
 $mobile-mode: $content-max-width + $width-menu + 60px;
 
 $image-border-radius: 5px;
